Fixed bug where the table overlaps the sidebar in narrower screens

--- a/client/src/components/OrderTable/index.css
+++ b/client/src/components/OrderTable/index.css
@@ -13,4 +13,8 @@ thead[class*="ant-table-thead"] th{
     color: rgb(243, 243, 243) !important;
     font-size: large;
   }
+
+.ant-table-thead tr :first-child {
+    z-index: 0;
+}
 /* .ant-table table { font-size: large; } */
